Primarily fix tab completion for custom command
Custom commands can now return completions for more than two levels deep
even if they are stipulated.
All small changes too